# otus-cpp-professional

./: CMakeLists.txt  README.md  main.cpp  main_client.cpp
.github/workflows/: HW_1.yml  HW_10.yml  HW_11.yml  HW_12.yml  HW_2.yml  HW_3.yml  HW_4.yml  HW_5.yml  HW_6.yml  HW_7.yml  HW_8.yml  HW_9.yml
include/: accumulator.h  allocator.h  bulk_command.h  command_executor.h  command_parser.h  context.h  database.h  dublicate_finder.h  error_codes.h  file.h  file_list_creator.h  filter.h  functions.h  handler.h  handlers.h  hashers.h  logger.h  mapper.h  matrix.h  n_container.h  node.h  parser.h  pusher.h  reader.h  reducer.h  searcher.h  shuffler.h  splitter.h  table.h  tuple_creator.h  writer.h
include/controller/: controller.h
include/model/shapes/: circle.h  graphicscene.h  graphicsitem.h  rectangle.h  shape.h
include/model/utils/: color.h  document.h
include/utils/: utils.h
include/view/: view.h
lib/: async.cpp  async.h
network/include/: server.h  session.h
network/src/: server.cpp  session.cpp
src/: accumulator.cpp  bulk_command.cpp  command_executor.cpp  command_parser.cpp  context.cpp  database.cpp  dublicate_finder.cpp  error_codes.cpp  execute_handler.cpp  file.cpp  file_list_creator.cpp  filter.cpp  functions.cpp  handler.cpp  hashers.cpp  logger.cpp  logger_handler.cpp  main.cpp  main_handler.cpp  mapper.cpp  n_container.cpp  parser.cpp  pusher.cpp  reader.cpp  reducer.cpp  shuffler.cpp  splitter.cpp  table.cpp  writer.cpp
src/controller/: controller.cpp
src/model/shapes/: circle.cpp  graphicscene.cpp  graphicsitem.cpp  rectangle.cpp  shape.cpp  view.cpp
src/model/utils/: color.cpp  document.cpp
src/utils/: utils.cpp
src/view/: view.cpp
test/: data.txt  data_states.txt
tests/cpp/: test.cpp  test_accumulator.cpp  test_database.cpp  test_logger.cpp  test_messages.cpp  test_parser.cpp  test_table.cpp  test_writer.cpp
tests/cpp/utils/: barrier.cpp  test_classes.cpp  utils.cpp
tests/gtest/lib/: gtest_main.lib
tests/gtest/lib/cmake/GTest/: GTestConfigVersion.cmake  GTestTargets.cmake
tests/gtest/lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
tests/include/: barrier.h  test_classes.h  utils.h
